--- a/contacts/package.json
+++ b/contacts/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "escape-string-regexp": "^1.0.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.12"
+    "react-scripts": "1.0.12",
+    "sort-by": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
