--- a/contacts/package.json
+++ b/contacts/package.json
@@ -6,6 +6,7 @@
     "escape-string-regexp": "^1.0.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.12",
     "sort-by": "^1.2.0"
   },
